Mobile nav fixed, now it's centered on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@ MINE font sizes will be the             1rem = 16px; I'll divide by 16
 If sir, needs 48px he'll write 4.8rem, 
 and when I need 48px I'll write 3rem (16x3)
 */
+
 html {
   overflow-x: hidden;
 }
@@ -81,35 +82,26 @@ body {
   display: none; /*close icon ko hide kar rhe,*/
 }
 
-/* STICKY NAVIGATION */
-.sticky .header{
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  width: 100%;
-  height: 5rem;
-  padding-top: 0;
-  padding-bottom: 0;
-  background-color: rgba(255, 255, 255, 0.97);
-  z-index: 999;
-  box-shadow: 0 0.75rem 2rem rgba(0,0,0, 0.03);
-}
-
 
 
 /* ************************************************************************* */
 /*****************************  M E D I A    Q U E R Y ***********************/
 /* ************************************************************************* */
 @media (max-width: 59rem) {
-
   /* MOBILE NAVIGATION */
+  
+  /* .header { 
+    margin: 0 auto;
+    width: 100%;
+    text-align: center;
+  } */
   .btn-mobile-nav {
     display: block;
     z-index: 9999;
   }
 
   .main-nav {
-    background-color: rgb(255, 255, 255, 0.97);
+    background-color: rgba(214, 153, 153, 0.97);
     position: absolute;
     top: 0;
     left: 0;
@@ -133,13 +125,14 @@ body {
   }
 
   /* And when it actually Opened (means in mobile devices) */
-  .nav-open .main-nav{
+ .nav-open .main-nav{
     opacity: 1;
     pointer-events: auto;
     visibility: visible;
 
-    /* jab .nav-open khola jaye to, left side se menu sab aa jaye */
+    /* jab .nav-open khola jaye to, right side se menu sab aa jaye */
     transform: translateX(0);
+    left: 0;
   }
   .nav-open .icon-mobile-nav[name="close-outline"] {
     display: block; /*close icon ko show kar rhe,*/
@@ -150,6 +143,9 @@ body {
   .main-navi-list {
     flex-direction: column;
     gap: 3rem;
+    width: 100%;
+    text-align: center;
+    padding-left: 0;
   }
   .btn-adm:link, .btn-adm:visited {
     font-weight: 600;
